--- a/_config.yml
+++ b/_config.yml
@@ -19,12 +19,12 @@
 # in the templates via {{ site.myvariable }}.
 
 title: MiniRyś
-description: >- # this means to ignore newlines until "baseurl:"
-  GroupOfRobots github page
+description: The MiniRyś group of robots project website
 baseurl: ""
-url: "https://groupofrobots.github.io/"
+url: https://groupofrobots.github.io/
 github_username: GroupOfRobots
 logo: assets/images/minirys.jpg
+repository: GroupOfRobots/groupofrobots.github.io
 
 # Build settings
 theme: jekyll-theme-minimal
